# oca-client

./: .gitignore  README.md  publish.sh  pyproject.toml
data/: product.json
data/catalogs/: CIE10_c16.json  plot_type.json  sex.json
oca/: client.py
oca/dto/: __init__.py
oca/utils/: utils.py
tests/: oca_test.py
